fix: more jdbc fixes