@@ -5,7 +5,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *         http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -19,12 +19,14 @@ import io.gravitee.am.common.analytics.Type;
 import io.gravitee.am.model.ReferenceType;
 import io.gravitee.am.model.common.Page;
 import io.gravitee.am.reporter.api.audit.AuditReportableCriteria;
+import io.gravitee.am.reporter.api.audit.AuditReportableCriteria.Builder;
 import io.gravitee.am.reporter.api.audit.AuditReporter;
 import io.gravitee.am.reporter.api.audit.model.Audit;
 import io.gravitee.am.reporter.api.audit.model.AuditAccessPoint;
 import io.gravitee.am.reporter.api.audit.model.AuditEntity;
 import io.gravitee.am.reporter.api.audit.model.AuditOutcome;
 import io.gravitee.am.reporter.jdbc.tool.DatabaseUrlProvider;
+import io.reactivex.rxjava3.core.Single;
 import io.reactivex.rxjava3.observers.TestObserver;
 import org.junit.Before;
 import org.junit.Test;
@@ -90,7 +92,7 @@ public class JdbcAuditReporterTest {
         for (int i = 0; i < loop; ++i) {
             Audit reportable = buildRandomAudit(ReferenceType.DOMAIN, "testReporter_aggregationHistogram");
             reportable.setType("FIXED_TYPE");
-            reportable.setTimestamp( now.plusMillis((i * 60000)));
+            reportable.setTimestamp(now.plusMillis((i * 60000)));
             // first insert doesn't match the criteria
             auditReporter.report(reportable);
 
@@ -98,7 +100,7 @@ public class JdbcAuditReporterTest {
             reportable = buildRandomAudit(ReferenceType.DOMAIN, "testReporter_aggregationHistogram");
             reportable.getTarget().setAlternativeId(MY_USER);
             reportable.setType("FIXED_TYPE");
-            reportable.setTimestamp( now.plusMillis((i * 60000)));
+            reportable.setTimestamp(now.plusMillis((i * 60000)));
             auditReporter.report(reportable);
 
             // third insert match criteria with failure status
@@ -106,7 +108,7 @@ public class JdbcAuditReporterTest {
             reportable.getTarget().setAlternativeId(MY_USER);
             reportable.getOutcome().setStatus("FAILURE");
             reportable.setType("FIXED_TYPE");
-            reportable.setTimestamp( now.plusMillis((i * 60000)));
+            reportable.setTimestamp(now.plusMillis((i * 60000)));
             auditReporter.report(reportable);
         }
 
@@ -126,10 +128,10 @@ public class JdbcAuditReporterTest {
         test.assertValue(map -> map.size() == 2);
         final String failureKey = "FIXED_TYPE_FAILURE".toLowerCase();
         final String successKey = "FIXED_TYPE_SUCCESS".toLowerCase();
-        test.assertValue(map -> map.get(failureKey) != null && ((List<Long>)map.get(failureKey)).stream().distinct().filter(i -> i != 0).count() == 1);
-        test.assertValue(map -> map.get(failureKey) != null && ((List<Long>)map.get(failureKey)).stream().distinct().filter(i -> i != 0).findFirst().get() == 1);
-        test.assertValue(map -> map.get(successKey) != null && ((List<Long>)map.get(successKey)).stream().distinct().filter(i -> i != 0).count() == 1);
-        test.assertValue(map -> map.get(successKey) != null && ((List<Long>)map.get(successKey)).stream().distinct().filter(i -> i != 0).findFirst().get() == 1);
+        test.assertValue(map -> map.get(failureKey) != null && ((List<Long>) map.get(failureKey)).stream().distinct().filter(i -> i != 0).count() == 1);
+        test.assertValue(map -> map.get(failureKey) != null && ((List<Long>) map.get(failureKey)).stream().distinct().filter(i -> i != 0).findFirst().get() == 1);
+        test.assertValue(map -> map.get(successKey) != null && ((List<Long>) map.get(successKey)).stream().distinct().filter(i -> i != 0).count() == 1);
+        test.assertValue(map -> map.get(successKey) != null && ((List<Long>) map.get(successKey)).stream().distinct().filter(i -> i != 0).findFirst().get() == 1);
     }
 
     @Test
@@ -165,11 +167,11 @@ public class JdbcAuditReporterTest {
 
         int expectedFailure = accFailure;
         int expectedSuccess = accSuccess;
-        test.assertValue(map -> map.size() == (( expectedFailure > 0 && expectedSuccess > 0 ) ? 2 : 1));
+        test.assertValue(map -> map.size() == ((expectedFailure > 0 && expectedSuccess > 0) ? 2 : 1));
         test.assertValue(map -> expectedFailure == 0 || map.containsKey("FAILURE"));
         test.assertValue(map -> expectedSuccess == 0 || map.containsKey("SUCCESS"));
-        test.assertValue(map -> expectedFailure == 0 ||((Number)map.get("FAILURE")).intValue() == expectedFailure);
-        test.assertValue(map -> expectedSuccess == 0 ||((Number)map.get("SUCCESS")).intValue() == expectedSuccess);
+        test.assertValue(map -> expectedFailure == 0 || ((Number) map.get("FAILURE")).intValue() == expectedFailure);
+        test.assertValue(map -> expectedSuccess == 0 || ((Number) map.get("SUCCESS")).intValue() == expectedSuccess);
     }
 
     @Test
@@ -200,15 +202,15 @@ public class JdbcAuditReporterTest {
         test.assertValue(map -> map.size() == 1);
         test.assertValue(map -> map.containsKey("data"));
         int expectedResult = acc;
-        test.assertValue(map -> map.get("data") != null && ((Long)map.get("data")).intValue() == expectedResult);
+        test.assertValue(map -> map.get("data") != null && ((Long) map.get("data")).intValue() == expectedResult);
     }
 
-   @Test
+    @Test
     public void testReporter_aggregationCount_accessPointId() {
         int loop = 10;
         int acc = 0;
 
-       String accessPointId = UUID.randomUUID().toString();
+        String accessPointId = UUID.randomUUID().toString();
 
         for (int i = 0; i < loop; ++i) {
             Audit reportable = buildRandomAudit(ReferenceType.DOMAIN, "testReporter_aggregationCount");
@@ -228,7 +230,7 @@ public class JdbcAuditReporterTest {
         test.assertValue(map -> map.size() == 1);
         test.assertValue(map -> map.containsKey("data"));
         int expectedResult = acc;
-        test.assertValue(map -> map.get("data") != null && ((Long)map.get("data")).intValue() == expectedResult);
+        test.assertValue(map -> map.get("data") != null && ((Long) map.get("data")).intValue() == expectedResult);
     }
 
     @Test
@@ -267,7 +269,7 @@ public class JdbcAuditReporterTest {
         int loop = 10;
         List<String> types = new ArrayList<>();
         for (int i = 0; i < loop; ++i) {
-            Audit reportable = buildRandomAudit(ReferenceType.DOMAIN, "testReporter_searchUser");
+            Audit reportable = buildRandomAudit(ReferenceType.DOMAIN, "testReporter_searchTypes");
             if (i % 2 == 0) {
                 types.add(reportable.getType());
             }
@@ -277,63 +279,41 @@ public class JdbcAuditReporterTest {
         waitBulkLoadFlush();
 
         AuditReportableCriteria criteria = new AuditReportableCriteria.Builder().types(types).build();
-        TestObserver<Page<Audit>> test = auditReporter.search(ReferenceType.DOMAIN, "testReporter_searchUser", criteria, 0, 20).test();
+        TestObserver<Page<Audit>> test = auditReporter.search(ReferenceType.DOMAIN, "testReporter_searchTypes", criteria, 0, 20).test();
         test.awaitDone(10, TimeUnit.SECONDS);
         test.assertNoErrors();
         test.assertValue(page -> page.getTotalCount() == types.size());
         test.assertValue(page -> page.getCurrentPage() == 0);
         test.assertValue(page -> page.getData() != null && page.getData().size() == types.size());
         test.assertValue(page -> page.getData().stream().map(Audit::getId).distinct().count() == types.size());
-        test.assertValue(page -> page.getData().stream().map(Audit::getType).collect(Collectors.toList()).containsAll(types));
+        test.assertValue(page -> page.getData().stream().map(Audit::getType).toList().containsAll(types));
     }
 
     @Test
-    public void testReporter_search() {
+    public void test_reporter_search() {
         int loop = 10;
-        for (int i = 0; i < loop; ++i){
+        for (int i = 0; i < loop; ++i) {
             Audit reportable = buildRandomAudit(ReferenceType.DOMAIN, "testReporter_search");
             auditReporter.report(reportable);
         }
 
         waitBulkLoadFlush();
 
-        TestObserver<Page<Audit>> test = auditReporter.search(ReferenceType.DOMAIN, "testReporter_search", new AuditReportableCriteria.Builder().build(), 0, 20).test();
+        final Single<Page<Audit>> testReporterSearch = auditReporter.search(ReferenceType.DOMAIN, "testReporter_search", new Builder().build(), 0, 20);
+        TestObserver<Page<Audit>> test = testReporterSearch.test();
         test.awaitDone(10, TimeUnit.SECONDS);
         test.assertNoErrors();
         test.assertValue(page -> page.getTotalCount() == loop);
         test.assertValue(page -> page.getCurrentPage() == 0);
         test.assertValue(page -> page.getData() != null && page.getData().size() == loop);
         test.assertValue(page -> page.getData().stream().map(Audit::getId).distinct().count() == loop);
-
-        List<Audit> readAudits = new ArrayList<>();
-        // test paging - read first page
-        test = auditReporter.search(ReferenceType.DOMAIN, "testReporter_search", new AuditReportableCriteria.Builder().build(), 0, 5).test();
-        test.awaitDone(10, TimeUnit.SECONDS);
-        test.assertNoErrors();
-        test.assertValue(page -> page.getTotalCount() == loop);
-        test.assertValue(page -> page.getCurrentPage() == 0);
-        test.assertValue(page -> page.getData() != null && page.getData().size() == 5);
-        test.assertValue(page -> page.getData().stream().map(Audit::getId).distinct().count() == 5);
-        test.assertValue(page -> readAudits.addAll(page.getData()));
-        // test paging - read second page
-        test = auditReporter.search(ReferenceType.DOMAIN, "testReporter_search", new AuditReportableCriteria.Builder().build(), 1, 5).test();
-        test.awaitDone(10, TimeUnit.SECONDS);
-        test.assertNoErrors();
-        test.assertValue(page -> page.getTotalCount() == loop);
-        test.assertValue(page -> page.getCurrentPage() == 1);
-        test.assertValue(page -> page.getData() != null && page.getData().size() == 5);
-        test.assertValue(page -> page.getData().stream().map(Audit::getId).distinct().count() == 5);
-        test.assertValue(page -> readAudits.addAll(page.getData()));
-
-        // all audits should be different
-        assertEquals(loop, readAudits.stream().map(Audit::getId).distinct().count());
     }
 
     @Test
     public void testReporter_findById() {
         List<Audit> reportables = new ArrayList<>();
         int loop = 10;
-        for (int i = 0; i < loop; ++i){
+        for (int i = 0; i < loop; ++i) {
             Audit reportable = buildRandomAudit(ReferenceType.DOMAIN, "testReporter_findById");
             reportables.add(reportable);
             auditReporter.report(reportable);
@@ -369,37 +349,37 @@ public class JdbcAuditReporterTest {
 
         Audit reportable = new Audit();
         reportable.setId(random);
-        reportable.setType("type"+random);
-        reportable.setTransactionId("transaction"+random);
+        reportable.setType("type" + random);
+        reportable.setTransactionId("transaction" + random);
         reportable.setReferenceType(refType);
         reportable.setReferenceId(refId);
         reportable.setTimestamp(Instant.now());
 
         AuditEntity target = new AuditEntity();
         target.setReferenceType(ReferenceType.ORGANIZATION);
-        target.setReferenceId("org"+random);
-        target.setAlternativeId("altid"+random);
-        target.setType("type"+random);
+        target.setReferenceId("org" + random);
+        target.setAlternativeId("altid" + random);
+        target.setType("type" + random);
         target.setAttributes(Collections.singletonMap("key1", "value1"));
         reportable.setTarget(target);
 
         AuditEntity actor = new AuditEntity();
         actor.setReferenceType(ReferenceType.ENVIRONMENT);
-        actor.setReferenceId("env"+random);
-        actor.setAlternativeId("altid"+random);
-        actor.setType("type"+random);
+        actor.setReferenceId("env" + random);
+        actor.setAlternativeId("altid" + random);
+        actor.setType("type" + random);
         actor.setAttributes(Collections.singletonMap("key1", "value1"));
         reportable.setActor(actor);
 
         AuditOutcome outcome = new AuditOutcome();
         outcome.setStatus("SUCCESS");
-        outcome.setMessage("Message"+random);
+        outcome.setMessage("Message" + random);
         reportable.setOutcome(outcome);
 
         AuditAccessPoint accessPoint = new AuditAccessPoint();
-        accessPoint.setId("id"+random);
+        accessPoint.setId("id" + random);
         accessPoint.setIpAddress("127.0.0.1");
-        accessPoint.setUserAgent("useragent"+random);
+        accessPoint.setUserAgent("useragent" + random);
         reportable.setAccessPoint(accessPoint);
         return reportable;
     }
